Break dependency of gda.epics on gda.client.
RCPPlotter is the single class in gda.client which causes gda.epics (and hence
all server builds) to depend upon gda.client and thus many othe client plugins.
Moving it to the gda.analysis plugin proper breaks this dependency and reduces
the splitting of the gda.analysis package which we need to do to have an OSGI
system anyway. Affected plugins uk.ac.gda.beamline.i12 and
uk.ac.gda.devices.pixium have already had their manifest files updated to
require the uk.ac.gda.analysis bundle so the movement should not affect them.
Making this change allows 59 plugins to be removed from the server launcher.

Change-Id: I4ca54dc9a834a446290f36b8e9df4669e052c697

--- a/documentation.gda/GDA_Release_Notes/source/8.52.rst
+++ b/documentation.gda/GDA_Release_Notes/source/8.52.rst
@@ -15,6 +15,9 @@ Developer
 The uk.ac.gda.example plugin has been split into two with the server based packages being in the new uk.ac.gda.example.server and the client code remaining in the original.
 This is to remove one of the links that causes server code to have to depend on client plugins. 
 
+The RCPPlotter class has been moved from the gda-client plugin into the gda.analysis plugin to break the dependency of gda.epics on gda.client. 
+This also affects uk.ac.gda.beamline.i12 and uk.ac.gda.devices.pixium whose manifest files now require the uk.ac.gda.analysis bundle.
+
 Important
 ~~~~~~~~~
 
