ARPES-319 Add ScannableMotorWithDemandPosition which returns the actual and demand positions
This class can be used as a direct replacement of scannable motor with the
additional feature that the demand positions will be recorded into the NeXus
file. This new class does not support the returningDemandPosition flag.

Added example to mapping motors in example-config
Added release note
Added tests

Change-Id: I238b5f90d6c307bf031cb9110f65c0bc28686faf

--- a/documentation.gda/GDA_Release_Notes/source/8.52.rst
+++ b/documentation.gda/GDA_Release_Notes/source/8.52.rst
@@ -23,6 +23,7 @@ Important
 
 New Features
 ~~~~~~~~~~~~
+-Added ScannableMotorWithDemandPosition to return both the actual and demand positions See JIRA ticket `ARPES-319 <http://jira.diamond.ac.uk/browse/ARPES-319>`_ and Gerrit change set `1392 <http://gerrit.diamond.ac.uk:8080/#/c/1392/>`_ for details. This class can be used as a direct replacement of ScannableMotor
 
 Fixes
 ~~~~~
