Minor documentation changes mostly related to GDA 9.
Change-Id: Ie59a5d8de33f8e9e913bf4cdbdc76c0e44a003fb

--- a/documentation.gda/GDA_Release_Notes/source/8.50.rst
+++ b/documentation.gda/GDA_Release_Notes/source/8.50.rst
@@ -1,5 +1,5 @@
-GDA 8.50  (expected release: Oct/2015)
-======================================
+GDA 8.50  (Oct/2015)
+====================
 
 User Highlights
 ---------------
